[package]
name = "nvo_servers"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
serde_json = "1.0"
mio = { version = "0.8.11", features = ["os-poll", "net"] }
[target.'cfg(target_os = "linux")'.dependencies]
epoll = "4.3.3"
[target.'cfg(target_os = "freebsd")'.dependencies]
kqueue-sys = "1.0.4"

[dev-dependencies]
ureq = "2.9.6" # until we write our own!

[lib]
name = "nvo_servers"
path = "src/lib.rs"