[package]
name = "nvo_servers"
version = "0.1.5"
edition = "2021"
license = "GPL-3.0"
description = "A high-performance, async HTTP server library with zero panics in production"
repository = "https://github.com/pirkus/nvo_servers"
homepage = "https://github.com/pirkus/nvo_servers"
documentation = "https://docs.rs/nvo_servers"
readme = "README.md"
keywords = ["http", "server", "async", "web", "no-panic"]
categories = ["network-programming", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.210"
log = "0.4"
env_logger = "0.11.3"
serde_json = "1.0"
ureq = { version = "2.9.6", features = ["json"] }
smallvec = "1.13"
futures = "0.3.17"

[target.'cfg(target_os = "linux")'.dependencies]
epoll = "4.3.3"

[target.'cfg(any(target_os = "freebsd", target_os = "macos"))'.dependencies]
kqueue-sys = "1.0.3"

[dev-dependencies]

[dev-dependencies.reqwest]
version = "0.12.8" # until we write our own!
features = ["blocking"]

[dev-dependencies.mongodb]
version = "2.8.2"
default-features = false
features = ["async-std-runtime"]

[dev-dependencies.testcontainers]
version = "0.23.1"
features = ["blocking"]
